Fix overflow in Note
Added scroll bar to the Note to prevent text from overflowing out from
the note when there are too many characters.

--- a/src/Style/Note.css
+++ b/src/Style/Note.css
@@ -5,7 +5,6 @@
     background-color: aliceblue;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
     font-family: 'Poppins', sans-serif;
-    align-self: center;
 }
 
 .DarkMode .Note {
@@ -16,7 +15,6 @@
 textarea {
     border: none;
     resize: none;
-    overflow: hidden;
     text-overflow: ellipsis;
     font-family: inherit;
     font-size: inherit;
@@ -101,7 +99,9 @@ textarea:placeholder-shown {
 
 .Note .NoteBody {
     margin: 0 16px;
+    max-height: 300px;
     text-align: justify;
+    overflow-y: auto;
 }
 
 .Note .NoteBody p {
@@ -120,7 +120,7 @@ textarea:placeholder-shown {
     margin: 0 15px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .Note .NoteFooter button {
